--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,8 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "no-unused-vars": "warn",
+        "no-param-reassign": "warn",
+        "brace-style": "warn"
     }
 }
